--- a/module/Admin/view/admin/article/index.phtml
+++ b/module/Admin/view/admin/article/index.phtml
@@ -57,3 +57,12 @@
     ?>
      </tbody>
 </table>
+
+<?php 
+
+    echo $this->paginationControl($articles,
+                                  'Sliding',
+                                  'pagination_control',
+                                  array('route' => 'admin/article'));
+    
+?>
