--- a/module/Admin/view/layout/pagination_control.phtml
+++ b/module/Admin/view/layout/pagination_control.phtml
@@ -2,7 +2,7 @@
     <ul class="pagination pagination-sm">
         <!-- Previous page link -->
         <?php if (isset($this->previous)): ?>
-            <li><a href="<?php echo $this->url($this->route); ?>?page=<?php echo $this->previous; ?>"><<<</a></li>
+            <li><a href="<?php echo $this->url($this->route); ?>?page=<?php echo $this->previous; ?>"><<</a></li>
         <?php else: ?>
             <li class="disabled">
                 <a href="#" onclick="return false;">
