--- a/module/Admin/view/admin/index/index.phtml
+++ b/module/Admin/view/admin/index/index.phtml
@@ -1,2 +1,3 @@
 <h1>Упрвление сайтом</h1>
-
+<!--nav. menu панель управления сайтом-->
+<?php  echo $this->navigation('admin_navigation')->menu(); ?>
